<resources>
    <string name="app_name">BLUrry</string>
    <string name="intro">Ini merupakan konsep laporan slurry handling secara realtime. app ini berfungsi agar : \n <b>1.</b> Mengetahui lumpur yang masuk berdasarkan laporan tss treatment. input by admin Maintenance setiap minggu \n <b>2.</b> Mengetahui jumlah lumpur yang dipompa keluar dengan konsep : \n <i>a. konvensional (tanpa flowmeter) \n b. dengan flowmeter. </i> \n <b>3.</b> hasil realtime pengukuran.</string>
    <string name="volume_in">Volume In</string>
    <string name="volume_out">Volume Out</string>
    <string name="calculate">Calculate</string>
    <string name="title_activity_volume_in_input_data">VolumeInInputData</string>
    <string name="title_activity_volume_in_master_data">VolumeInMasterData</string>
    <string name="title_activity_volume_in_master_data_with_graph">VolumeInMasterDataWithGraph
    </string>
    <string name="settling_pond">Settling Pond :</string>
    <string name="intake">Intake :</string>
    <string name="sampleTextPercentageLeft">40%</string>
    <string name="sampleTextPercentageRight">60%</string>
    <string name="sampleTextIntake">Q :...m3/jam\nTss :...mg/l</string>
    <string name="sampleTextMp1">BB 01\nV = 4200m3</string>
    <string name="sampleTextVolume">V = 6500 m3</string>
    <string name="master_data">Master Data</string>
    <string name="input_data">Input Data</string>
    <string-array name="settling_pond_array">
        <item>SP 1</item>
        <item>SP 2b</item>
        <item>SP 3b</item>
        <item>SP 4</item>
        <item>SP 5</item>
        <item>SP 6</item>
        <item>SP 6</item>
        <item>SP 7</item>
    </string-array>
    <string name="samplePenjelasanVolume">Penjelasan Volume \n[Sample Text]</string>
    <string name="konvensional">Konvensional</string>
</resources>
