<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/backroundMaster"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.captain_n3mo.blurry.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="70dp"
        android:background="@color/colorVolumeIn"
        android:layout_height="wrap_content"
        android:onClick="buttonVolumeIn"
        android:text="@string/volume_in" />

    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:background="@color/colorVolumeOut"
        android:layout_height="wrap_content"
        android:onClick="buttonVolumeOut"
        android:text="@string/volume_out" />

    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:background="@color/colorCalculate"
        android:layout_height="wrap_content"
        android:onClick="buttonCalculate"
        android:text="@string/calculate" />

</LinearLayout>
