<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/backroundMaster"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.captain_n3mo.blurry.VolumeIn">

    <Button
        android:layout_marginTop="20dp"
        android:background="@color/colorVolumeIn"
        android:layout_width="match_parent"
        android:text="@string/volume_in"
        android:textColor="@color/white"
        android:enabled="false"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:width="200dp"
            android:text="@string/samplePenjelasanVolume"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:text="@string/master_data"
                android:textColor="@color/white"
                android:background="@color/backgroundButton"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:text="@string/input_data"
                android:textColor="@color/white"
                android:background="@color/backgroundButton"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
